--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,33 +11,34 @@ pool:
 
 
 steps:
-  - task: AzurePowerShell@5
-    inputs:
-      azureSubscription: 'anugrah pay as you go(1)(cbf8b966-9488-4fc7-a133-b65c3b0285a8)'
-      ScriptType: 'InlineScript'
-      Inline: |
-        $resourceGroupName = "rg-advm-prod-shared-001"
-        $vmName = "TestVmGold"
-        $subscriptionId = "cbf8b966-9488-4fc7-a133-b65c3b0285a8"
-         
-         
-        function Start/Stop-AzureVM {
-            param (
-                [string]$resourceGroupName,
-                [string]$vmName,
-                [string]$subscriptionId
-            )
-         
-            $vmStatus = Get-AzVM -ResourceGroupName $resourceGroupName -Name $vmName -Status
-         
-            if ($vmStatus.Statuses[1].Code -eq 'PowerState/Stopped') {
-                Start-AzVM -ResourceGroupName $resourceGroupName -Name $vmName -SubscriptionId $subscriptionId
-                Write-Host "Azure VM '$vmName' started."
-            } elseif ($vmStatus.Statuses[1].Code -eq 'PowerState/Running') {
-                Stop-AzVM -ResourceGroupName $resourceGroupName -Name $vmName -Force -SubscriptionId $subscriptionId
-                Write-Host "Azure VM '$vmName' stopped."
-            } else {
-                Write-Host "Unknown VM state for '$vmName'."
-            }
-        }
-      preferredAzurePowerShellVersion: '3.1.0'
+- task: AzurePowerShell@5
+  inputs:
+    azureSubscription: 'anugrah pay as you go(1)(cbf8b966-9488-4fc7-a133-b65c3b0285a8)'
+    ScriptType: 'InlineScript'
+    Inline: |
+      $resourceGroupName = "rg-advm-prod-shared-001"
+      $vmName = "TestVmGold"
+      $subscriptionId = "cbf8b966-9488-4fc7-a133-b65c3b0285a8"
+       
+       
+      function Start/Stop-AzureVM {
+          param (
+              [string]$resourceGroupName,
+              [string]$vmName,
+              [string]$subscriptionId
+      		[ValidateSet("Start", "Stop")]
+      		[string]$VmAction
+          )
+       
+          $vmStatus = Get-AzVM -ResourceGroupName $resourceGroupName -Name $vmName -Status
+       
+          if ($vmStatus.Statuses[1].Code -eq 'PowerState/Stopped') {
+              Start-AzVM -ResourceGroupName $resourceGroupName -Name $vmName -SubscriptionId $subscriptionId
+              Write-Host "Azure VM '$vmName' started."
+          } elseif ($vmStatus.Statuses[1].Code -eq 'PowerState/running') {
+              Stop-AzVM -ResourceGroupName $resourceGroupName -Name $vmName -Force -SubscriptionId $subscriptionId
+              Write-Host "Azure VM '$vmName' stopped."
+          } else {
+              Write-Host "Unknown VM state for '$vmName'."
+          }
+      }
